# ai-incident-commander

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  BUILD_STATUS.json  CODEX_RESULT.md  Debugging_Log.md  Implementation_Changelog.md  Makefile  README.md  docker-compose.yml  handover.md  package.json  pnpm-lock.yaml  taskstatus.md
services/api/: Dockerfile  demo.db  main.py  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 114eaeeb8f04_initial_schema.py  7b91c4e2a6d5_evidence_provenance_fields.py  a9c1e6f3b208_patch_execution_artifacts.py  c3d5f1a9b024_investigation_reports.py  d4b8f1e6c530_verification_run_artifacts.py  e8a4f7c2d901_remediation_plan_artifacts.py  f9e8d7c6b540_m7_persistence.py
services/api/api/: models.py
services/api/app/: __init__.py  config.py  main.py  runtime.py  worker.py
services/api/app/api/: deps.py
services/api/app/demo/: __init__.py  codex_smoke.py  (+3 more)
services/api/tests/: conftest.py  test_api_contract_actions.py  test_demo_determinism.py  test_demo_runner.py  test_evaluation_suite.py  test_evidence_bundle.py  test_fixture_repo.py  test_health.py  test_incidents_api.py  test_investigation.py  test_m7_pr_communications.py  test_main.py  test_openai_investigation.py  test_openai_smoke.py  test_performance_contract.py  test_persistence.py  test_providers.py  test_redaction.py  test_redaction_persistence.py  test_remediation.py  test_runtime_foundation.py  test_sandbox_executor.py  test_sandbox_workspace.py  test_state_machine.py  test_timeline_determinism.py  test_verification.py
(+199 files in other folders)
