[project]
name = "incident-commander-api"
version = "0.1.0"
description = "Backend for Incident Commander AI"
authors = [
    {name = "AI", email = "ai@example.com"}
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0"
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "flake8>=7.0.0",
    "mypy>=1.9.0"
]
